--- a/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
+++ b/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
@@ -1,13 +1,23 @@
 ---
-test_cluster_id: ansible-test-cluster-{{ tiny_prefix }}
+test_enigne: aurora-mysql
+test_engine_version: 5.7
+test_instance_class: db.r5.large
 test_username: testrdsusername
 test_password: test-rds_password
-test_engine: aurora-mysql
-test_instance_id: ansible-test-instance-{{ tiny_prefix }}
-test_global_cluster_identifier: ansible-test-global-{{ tiny_prefix }}
-test_allocated_storage: 20
-test_max_allocated_storage: 22
-test_db_instance_class: db.r5.large
-test_region_src: us-east-1
-test_region_dest: us-east-1
+test_primary_cluster_subnet_group_name: ''
+
+# Global cluster parameters ================================
+test_global_cluster_name: ansible-test-global-{{ tiny_prefix }}
+
+# Primary cluster parameters ================================
+test_primary_cluster_name: ansible-test-primary-{{ tiny_prefix }}
+test_primary_cluster_region: us-east-1
+test_primary_cluster_instance_name: ansible-test-instance-primary-{{ tiny_prefix }}
+
+# Replica cluster parameters ================================
+test_replica_cluster_name: ansible-test-replica-{{ tiny_prefix }}
+test_replica_cluster_region: us-west-2
+test_replica_enable_global_write_forwarding: 'true'
+test_replica_cluster_instance_name: ansible-test-instance-replica-{{ tiny_prefix }}
+
 aws_security_token: '{{ security_token | default(omit) }}'
