--- a/roles/deploy_flask_app/tasks/deploy_app.yaml
+++ b/roles/deploy_flask_app/tasks/deploy_app.yaml
@@ -1,4 +1,7 @@
 ---
+- name: Create new host in inventory for use in later plays.
+  ansible.builtin.import_tasks: setup.yaml
+
 - name: Update ssh_config
   ansible.builtin.lineinfile:
     path: /etc/ssh/sshd_config
@@ -26,7 +29,7 @@
 - name: Get content of public key
   ansible.builtin.slurp:
     src: ~/.ssh/id_rsa.pub
-  register: sshkey
+  register: deploy_flask_app_sshkey
 
 - name: Create Cloud Resources (workers, load balancer, etc)
   module_defaults:
@@ -46,18 +49,18 @@
         - name: Create key pair to connect to the VM
           amazon.aws.ec2_key:
             name: "{{ localhost_key_pair }}"
-            key_material: "{{ sshkey.content | b64decode }}"
+            key_material: "{{ deploy_flask_app_sshkey.content | b64decode }}"
 
         - name: List running instances
           amazon.aws.ec2_instance_info:
             filters:
               tag:Name: "{{ instance_name }}"
               instance-state-name: running
-          register: vms
+          register: deploy_flask_app_vms
 
         - name: Compute number of instances to create/delete
           ansible.builtin.set_fact:
-            expected_instances: "{{ number_of_workers | int - vms.instances | length }}"
+            expected_instances: "{{ number_of_workers | int - deploy_flask_app_vms.instances | length }}"
 
         - name: Create list of targets hosts
           amazon.aws.ec2_instance:
@@ -76,7 +79,7 @@
             wait: true
             count: "{{ expected_instances }}"
             state: started
-          register: workers
+          register: deploy_flask_app_workers
           when: expected_instances | int > 0
 
         - name: List running instances (once again)
@@ -84,7 +87,7 @@
             filters:
               tag:Name: "{{ instance_name }}"
               instance-state-name: running
-          register: vms
+          register: deploy_flask_app_vms
 
         - name: Create list of instances (join)
           ansible.builtin.set_fact:
@@ -92,7 +95,7 @@
         - name: Update join_instances
           ansible.builtin.set_fact:
             instances_list: "{{ instances_list + [item.instance_id + ':' + item.private_ip_address] }}"
-          with_items: "{{ vms.instances }}"
+          with_items: "{{ deploy_flask_app_vms.instances }}"
 
     - name: Create inventory file
       ansible.builtin.template:
@@ -100,7 +103,7 @@
         dest: ~/inventory.ini
         mode: 0644
       vars:
-        workers_instances: "{{ vms.instances }}"
+        workers_instances: "{{ deploy_flask_app_vms.instances }}"
         workers_join: "{{ instances_list | join(',') }}"
 
     - name: Create vars file
@@ -161,7 +164,7 @@
               ansible.builtin.shell:
                 cmd: >
                   podman run --name registry500x
-                  -p {{ local_registry_port }}:5000
+                  -p {{ app_listening_port }}:5000
                   -v /opt/registry/data:/var/lib/registry:z
                   -v /opt/registry/auth:/auth:z
                   -e "REGISTRY_AUTH=htpasswd"
@@ -175,9 +178,9 @@
         - name: Push image into private registry
           ansible.builtin.shell:
             cmd: >
-              podman login 127.0.0.1:{{ local_registry_port }} -u '{{ local_registry_user }}' -p '{{ local_registry_pwd }}' --tls-verify=false &&
-              podman tag webapp 127.0.0.1:{{ local_registry_port }}/ansible-webapp &&
-              podman push 127.0.0.1:{{ local_registry_port }}/ansible-webapp --tls-verify=false
+              podman login 127.0.0.1:{{ app_listening_port }} -u '{{ local_registry_user }}' -p '{{ local_registry_pwd }}' --tls-verify=false &&
+              podman tag webapp 127.0.0.1:{{ app_listening_port }}/ansible-webapp &&
+              podman push 127.0.0.1:{{ app_listening_port }}/ansible-webapp --tls-verify=false
           changed_when: false
 
     - name: Initialize database tables
@@ -209,7 +212,7 @@
         cmd: >
           ansible-playbook playbook.yaml -i inventory.ini -v
           -e '@vars.yaml'
-          -e registry_host_port='{{ host_config.private_ip }}:{{ local_registry_port }}'
+          -e registry_host_port='{{ host_config.private_ip }}:{{ app_listening_port }}'
       args:
         chdir: ~/
       changed_when: false
@@ -223,7 +226,7 @@
             instance_port: 5000
             protocol: HTTP
             instance_protocol: HTTP
-        instance_ids: "{{ vms.instances | map(attribute='instance_id') | list }}"
+        instance_ids: "{{ deploy_flask_app_vms.instances | map(attribute='instance_id') | list }}"
         security_group_ids:
           - "{{ host_config.group_id }}"
         subnets:
@@ -234,9 +237,9 @@
       retries: 5
       delay: 10
       until: lb_result is successful
-      register: lb_result
+      register: deploy_flask_app_lb_result
       delegate_to: localhost
 
     - name: Debug application url
       ansible.builtin.debug:
-        msg: "Application url: {{ lb_result.elb.dns_name }}:{{ app_listening_port }}"
+        msg: "Application url: {{ deploy_flask_app_lb_result.elb.dns_name }}:{{ app_listening_port }}"
