organized role files

--- a/playbooks/webapp/migrate_webapp.yaml
+++ b/playbooks/webapp/migrate_webapp.yaml
@@ -83,6 +83,7 @@
 
   tasks:
     - name: Deploy app
-      ansible.builtin.import_role: cloud.aws_ops.deploy_flask_app
+      ansible.builtin.import_role:
+        name: cloud.aws_ops.deploy_flask_app
       vars:
         region: "{{ dest_region }}"
