--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -1,4 +1,6 @@
 ---
+aws_region: us-east-1
+resource_prefix: "ansible-demo-test"
 vpc_name: "{{ resource_prefix }}-vpc"
 vpc_cidr: 10.1.0.0/16
 subnet_cidr:
@@ -13,6 +15,10 @@ public_secgroup_name: "{{ resource_prefix }}-sg"
 rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
 rds_identifier: "{{ resource_prefix }}-rds-01"
 sshkey_pair_name: "{{ resource_prefix }}-key"
+
+# ids for add_host
+private_subnet_id: "subnet-0b174890d6e380456"
+vpc_id: "vpc-061f758b1e21a200b"
 
 bastion_host_name: "{{ resource_prefix }}-bastion"
 bastion_host_username: fedora
