--- a/roles/deploy_flask_app/files/vars/main.yaml
+++ b/roles/deploy_flask_app/files/vars/main.yaml
@@ -1,4 +1,26 @@
----
+# This is a sample vars file
+
+aws_region: us-east-1
+resource_prefix: "ansible-demo-test"
+vpc_name: "{{ resource_prefix }}-vpc"
+vpc_cidr: 10.1.0.0/16
+subnet_cidr:
+  - 10.1.0.0/24
+  - 10.1.1.0/24
+  - 10.1.2.0/24
+resource_tags:
+  prefix: "{{ resource_prefix }}"
+
+rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
+public_secgroup_name: "{{ resource_prefix }}-sg"
+rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
+rds_identifier: "{{ resource_prefix }}-rds-01"
+sshkey_pair_name: "{{ resource_prefix }}-key"
+
+# ids for add_host
+private_subnet_id: "subnet-0b174890d6e380456"
+vpc_id: "vpc-061f758b1e21a200b"
+
 bastion_host_name: "{{ resource_prefix }}-bastion"
 bastion_host_username: fedora
 bastion_host_type: t2.xlarge
@@ -28,3 +50,15 @@ rds_listening_port: 5432
 local_registry_user: ansible
 local_registry_pwd: testing123
 local_registry_port: "{{ app_listening_port }}"
+
+rds_allocated_storage_gb: 20
+rds_instance_class: db.m6g.large
+rds_instance_name: mysampledb123
+rds_engine: postgres
+rds_engine_version: "14.8"
+rds_master_password: L#5cH2mgy_
+rds_master_user: ansible
+
+image_filter: Fedora-Cloud-Base-35-*
+
+operation: create
