--- a/extensions/eda/rulebooks/aws_manage_cloudtrail_encryption.yml
+++ b/extensions/eda/rulebooks/aws_manage_cloudtrail_encryption.yml
@@ -7,11 +7,13 @@
           region_name: vars.region_name
         delay: 5
   rules:
-    - name: Cancels the deletion of the KMS key and re-enables it
+    - name: Cancel deletion or disabling of the KMS key
       condition: event.CloudTrailEvent.eventName=="ScheduleKeyDeletion" or event.CloudTrailEvent.eventName=="DisableKey"
       action:
         run_playbook:
-          name: playbooks/eda/aws_restore_kms_key.yml
+          name: cloud.aws_ops.aws_restore_kms_key
+          extra_vars:
+            kms_key_alias: "{{ kms_key_alias }}"
 
     - name: Re-create the CloudTrail
       condition: event.CloudTrailEvent.eventName=="DeleteTrail" and event.CloudTrailEvent.name == vars.cloudtrail_name
