--- a/extensions/eda/rulebooks/aws_manage_cloudtrail_encryption.yml
+++ b/extensions/eda/rulebooks/aws_manage_cloudtrail_encryption.yml
@@ -15,11 +15,18 @@
           extra_vars:
             kms_key_alias: "{{ kms_key_alias }}"
 
-    - name: Re-create the CloudTrail
-      condition: event.CloudTrailEvent.eventName=="DeleteTrail" and event.CloudTrailEvent.name == vars.cloudtrail_name
+    - name: Re-create the deleted trail
+      condition: >
+        event.CloudTrailEvent.eventName=="DeleteTrail"
+        and event.CloudTrailEvent.requestParameters.name is search(vars.cloudtrail_name)
       action:
         run_playbook:
-          name: playbooks/eda/aws_restore_cloudtrail.yml
+          name: cloud.aws_ops.aws_restore_cloudtrail
+          extra_vars:
+            cloudtrail_name: "{{ cloudtrail_name }}"
+            kms_key_alias: "{{ kms_key_alias }}"
+            s3_bucket_name: "{{ s3_bucket_name }}"
+            s3_key_prefix: "{{ s3_key_prefix | default('') }}"
 
     - name: Enable CreateTrail encryption
       condition: event.CloudTrailEvent.eventName=="UpdateTrail" and event.CloudTrailEvent.name == vars.cloudtrail_name and event.CloudTrailEvent.requestParameters.kmsKeyId==""
