Add sanity requirements
Signed-off-by: Alina Buzachis <abuzachis@redhat.com>

--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -78,6 +78,7 @@ jobs:
               "python-version": "3.9"
             }
           ]
+      collection_pre_install: '-r source/tests/sanity/requirements.yml'
   all_green:
     if: ${{ always() }}
     needs:
